Revision history for Perl extension Params::Util

0.25 Mon 14 May 2007
	- Adding the _SUBCLASS function to fill a gap between _CLASS and _DRIVER

0.24 Wed  9 May 2007
	- Adding the _DRIVER function for use in writing driver APIs

0.23 Tue 20 Feb 2007
        - Bug fix to _INVOCANT to handle false classes.

0.22 Wed  1 Nov 2006
	- Bug fix to _CODELIKE to handle CODE refs properly
	- Updating tests to work more accurately in this regard.

0.21 Tue 10 Oct 2006
	- When no compiler available, minimise the dependency on Scalar::Util,
	  because it's better to leave them with a slightly leaky version
	  than to fail altogether.

0.20 Tue 26 Sep 2006
	- Advanced deprecation of _CALLABLE to "warn but work".
	- Correctly refer to _CALLABLE being deprecated, not _CODELIKE.
	- Add support for Tie::Handle objects to _HANDLE
	- Add support for IO::Scalar objects to _HANDLE
	- Add support for IO::String objects to _HANDLE

0.19 Thu 14 Sep 2006
	- Adding more Scalar::Util tests, this time with some diagnostics

0.18 Thu 14 Sep 2006
	- Explicitly importing refaddr in t/07_handle.t to fix
          test failure on ActivePerl 5.8.0.
	- Increased Scalar::Util dep to 1.14 because we may well
	  be hurt by tied handles-related bug.

0.17 Tue  8 Aug 2006
	- Adding experimental _HANDLE implementation

0.16 Sun  2 Jul 2006
	- We don't check for stash definedness for _INVOCANT.
	  (This is required for 5.005 compat.)

0.15 Sun  2 Jul 2006
	# This release contains only build-time changes
	- Updating to Module::Install 0.63 to add 5.004 support (sorta)
	- Dropping version dependency to 5.004 (Ricardo Signes)

0.14 Wed 10 May 2006
	- No features() used in this dist, so removing auto_install
	- Moved _CALLABLE to _CODELIKE for symmetry reasons. Sorry :(
	  Immediate doc changover. Silent alias for a month, then
	  warning alias for 3 months, then full deprecation at the end
	  of August.
	- Removed RJBS's use warnings that broke 5.005-compatibility.
	- Other minor test cleanups.
